--- a/CathedralGame/CathedralGame/CathedralGame.vcxproj
+++ b/CathedralGame/CathedralGame/CathedralGame.vcxproj
@@ -131,14 +131,18 @@
   <ItemGroup>
     <ClCompile Include="Grid.cpp" />
     <ClCompile Include="Piece.cpp" />
+    <ClCompile Include="PieceManager.cpp" />
     <ClCompile Include="Source.cpp" />
+    <ClCompile Include="Tile.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="global.h" />
     <ClInclude Include="Grid.h" />
     <ClInclude Include="Piece.h" />
     <ClInclude Include="PieceEnum.h" />
+    <ClInclude Include="PieceManager.h" />
     <ClInclude Include="PieceTeam.h" />
+    <ClInclude Include="Tile.h" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
