--- a/CathedralGame/CathedralGame/CathedralGame.vcxproj.filters
+++ b/CathedralGame/CathedralGame/CathedralGame.vcxproj.filters
@@ -30,6 +30,9 @@
     <ClCompile Include="PieceManager.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="Ai.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Grid.h">
@@ -51,6 +54,9 @@
       <Filter>Header Files</Filter>
     </ClInclude>
     <ClInclude Include="PieceManager.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="Ai.h">
       <Filter>Header Files</Filter>
     </ClInclude>
   </ItemGroup>
